--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <td>
         <h1>Akash Das</h1>
         <p><em>bsc student in <a href="http://www.ignou.ac.in/">ignou</a> </em></p>
-        <p>i am lover of knowledge. i just want to create a better enviroment for the future generation of our socity.<br> so i want to somehow bring world peace in this world so insteed of fighting with each others, we can work togather for a batter
-          future.</p>
+        <p>I am a lover of knowledge. I just want to create a better environment for the future generation of our society.<br>
+           so I want to somehow bring world peace in this world so instead of fighting with each other, we can work together for a batter future.</p>
       </td>
     </tr>
   </table>
